# locality_aware

benchmark_tests/lassen/: gpu_alltoall4.5964602.err  gpu_alltoall4.5964602.out  gpu_alltoall4.6033352.err  gpu_alltoall4.6033352.out  gpu_alltoall4.6084106.out  gpu_alltoall40.6084358.out  gpu_alltoall_compare4.6033355.err  gpu_alltoall_compare4.6033355.out  gpu_alltoall_compare4.6035335.err  gpu_alltoall_compare4.6035335.out  gpu_alltoall_compare4.6040619.err  gpu_alltoall_compare4.6040619.out  gpu_alltoall_compare4.6079896.err  gpu_alltoall_compare4.6079896.out  gpu_alltoall_compare4.6083543.err  gpu_alltoall_compare4.6083543.out  nbralltoallv_n16.5874796.out  nbralltoallv_n16.5899291.err  nbralltoallv_n16.5899291.out  nbralltoallv_n16.5902005.err  nbralltoallv_n16.5902005.out  nbralltoallv_n16.5915371.out  nbralltoallv_n16.6089509.out  nbralltoallv_n16_1gpu.5902006.err  nbralltoallv_n16_1gpu.5902006.out  nbralltoallv_n16_1gpu.5915373.out  nbralltoallv_n16_1gpu_novector.5925467.out  nbralltoallv_n16_novector.5925466.out  nbralltoallv_n24.6089780.err  nbralltoallv_n24.6089780.out  nbralltoallv_n8.5772869_onlywait.err  nbralltoallv_n8.5772869_onlywait.out  nbralltoallv_n8.5772993.err  nbralltoallv_n8.5772993.out  nbralltoallv_n8.5773661.out  nbralltoallv_n8.5773920_onlywait.out  nbralltoallv_n8.5774275_onlywaitandnoranddispls.out  nbralltoallv_n8.5851611.out  nbralltoallv_n8.5874122.out  nbralltoallv_n8.5900200.err  (+30 more)
benchmark_tests/plots/: plot_gpu_neighbor_alltoallv_everywhere.py  plot_gpu_neighbor_alltoallv_everywhere_alltoall_amanda.py  plot_gpu_neighbor_alltoallv_everywhere_novector.py  (+1 more)
benchmarks/: CMakeLists.txt  gpu_alltoall.cpp  gpu_extraproc_alltoall.cpp  gpu_neighbor_alltoallv.cpp  gpu_neighbor_alltoallv.cpp.nodispls  gpu_neighbor_alltoallv_novector.cpp  gpu_threaded_alltoall.cpp  gpu_threaded_neighbor_alltoallv.cpp  gpu_threaded_neighbor_alltoallv.cpp.nodispls  gpu_threaded_neighbor_alltoallv_novector.cpp  neighbor_alltoallv_crs_spgemm.cpp  no_thread_launches.cpp  thread_launches.cpp
src/: mpi_advance.h
(+19 files in other folders)
